--- a/main.css
+++ b/main.css
@@ -11,6 +11,7 @@ header, footer {
     justify-content: center; 
     background-color: #3578E5;
     color: white;  
+    padding: 5px; 
 }
 
 nav {
@@ -56,7 +57,10 @@ img {
 
 figcaption {
     font-size: 1.1em; 
-    background-color: rgb(237, 240, 245); 
+    /* background-color: rgb(237, 240, 245);  */
+    background-color: orange; 
+    color: white;
+    font-weight: bold; 
 }
 
 header, nav, p, footer {
@@ -76,9 +80,9 @@ button {
 
 
 
-/* Media query for medium phone with a range of 375px to 425px */
+/* Media query for medium and large phones */
 
-@media only screen and (min-width: 375px) and (max-width: 425px) {
+@media only screen and (min-width: 375px) and (max-width: 767px) {
     .blog-image {
         background-color: #3578E5;
         width: 60%;
@@ -99,9 +103,51 @@ button {
     }
 }
 
-
-/* Media query for large phone */
-
 /* Media query for tablet */
 
+@media only screen and (min-width: 768px) and (max-width:1023px) {
+     .blog-image {
+         width: 70%; 
+     }
+
+     nav li {
+        font-size: 2em;
+     }
+
+     header {
+        font-size: 2.5em; 
+    }
+
+    footer {
+        font-size: 1.3em; 
+    }
+
+    figcaption {
+        font-size: 1.5em; 
+    }
+}
+
+
 /* Media query for desktop */
+
+@media only screen and (min-width: 1024px) {
+    .blog-image {
+        width: 70%; 
+    }
+
+    nav li {
+       font-size: 2em;
+    }
+
+    header {
+       font-size: 2.5em; 
+   }
+
+   footer {
+       font-size: 1.3em; 
+   }
+
+   figcaption {
+       font-size: 1.5em; 
+   }
+}
