--- a/danny-blog-2019.css
+++ b/danny-blog-2019.css
@@ -4,6 +4,14 @@
 
 }
 
+a:link {
+    text-decoration: none;
+  }
+
+  a:visited {
+    text-decoration: none;
+  }
+
 header, footer {
     display: flex;
     justify-content: center; 
