--- a/main.css
+++ b/main.css
@@ -6,6 +6,14 @@
 
 }
 
+a:link {
+    text-decoration: none;
+  }
+
+a:visited {
+    text-decoration: none;
+  }
+
 header, footer {
     display: flex;
     justify-content: center; 
@@ -57,7 +65,6 @@ img {
 
 figcaption {
     font-size: 1.1em; 
-    /* background-color: rgb(237, 240, 245);  */
     background-color: orange; 
     color: white;
     font-weight: bold; 
